@@ -69,6 +69,7 @@
 -Added popup menu item to jpeg panel to copy image to clipboard.
 -Added popup menu item to jpeg panel to print image.
 -Added cancel button to connection progress dialog.
+-Added popup menu item to chart panel to copy the chart to clipboard.
 
 1.2.0 - June 21, 2005
 -Added command line option (-s or --time-scale) to set the time scale
